Fixed week view on mobile

--- a/src/components/ScheduleWeek/ScheduleWeek.css
+++ b/src/components/ScheduleWeek/ScheduleWeek.css
@@ -39,10 +39,10 @@
 }
 
 .ScheduleWeek--week-view-container{
-  margin-top: 90px;
+  /* margin-top: 90px; */
   width: 100%;
   height: 100%;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   display: grid;
@@ -138,7 +138,9 @@
   margin: 0 !important;
 }
 
-.ScheduleWeek--week-view-item-subject{}
+.ScheduleWeek--week-view-item-subject{
+  font-weight: bold;
+}
 
 .ScheduleWeek--week-view-item-text,
 .ScheduleWeek--week-view-item-class-teacher,
@@ -158,25 +160,55 @@
     overflow: auto;
     max-width: 100vw;
     min-height: 700px;
+    top: 0;
+    left: 0;
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 70px 90px 90px 90px 90px 90px;
+    grid-template-rows: repeat(16, 70px);
   }
 
   .ScheduleWeek--week-view-header{
     position: sticky;
     top: 0;
     z-index: 21;
+    font-size: .8em;
+  }
+
+  .ScheduleWeek--week-view-header-day{
+    margin-top: 5px;
   }
 
   .ScheduleWeek--week-view-time-container{
     position: sticky;
     left: 0;
     z-index: 20;
+    font-size: .8em;
+    width: 55px;
+    margin: 0;
+    padding: 15px 7.5px;
   }
 
-  .sw-bg-header, .sw-empty{
+  .ScheduleWeek--week-view-background{
+    border-top: 1px solid #555555;
+    border-right: 1px solid #555555;
+    border-left: none;
+  }
+
+  .sw-bg-header{
     position: sticky;
     top: 0;
     background-color: rgba(34, 34, 34, 1);
     z-index: 21;
+  }
+
+  .sw-empty{
+    position: sticky;
+    left: 0;
+    background-color: rgb(34, 34, 34);
+    border-right: 1px solid #555555;
+    z-index: 22;
   }
 
   .sw-bg-time{
@@ -184,6 +216,17 @@
     left: 0;
     background-color: rgba(34, 34, 34, 1);
     z-index: 20;
+  }
+
+  .ScheduleWeek--week-view-item-subject{
+    font-size: .7em;
+    font-weight: bold;
+  }
+
+  .ScheduleWeek--week-view-item-text,
+  .ScheduleWeek--week-view-item-class-teacher,
+  .ScheduleWeek--week-view-item-room{
+    font-size: .6em;
   }
 }
 
